@startuml
class Chair {
    + Id: string
}

class Row {
    + Id: string
    + Chairs : Chair[]
}

class Field {
    + Id: String
    + Rows: Row[]
}

class FieldContainer {
    + Fields: Field[]
    
    + AddField(field: Field)
}

class Group {
    + GroupId: string
    + HasVisitorUnder12: bool
}

class Visitor {
    + Id: string
    + FullName: string
    + DateOfBirth: Date
    + GroupId: string 
    
    + CurrentAge(dateOfEvent: DateTime): int
}

class Event {
    + MaxVisitors: int
    + Visitors: Visitor[]
    + Groups: Group[] 
    + EventDate: Date
    
    + FindVisitorsByGroupId(GroupId: string): Visitor[]
}

Row "1" <-- "3-10" Chair
Chair "1" <-- "1" Visitor
Group "0" -l-> "*" Visitor
Field "1" <-- "1-3" Row
Event -u-> Visitor
Event -u-> Group
FieldContainer --> Field

@enduml